--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
-name = "diva-līvõmō"
+name = "diva-livomo"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.40"
+bincode = "1.3.3"
+blake3 = "0.3.8"
+dirs = "3.0.2"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
+sled = "0.34.6"
