--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.40"
-bincode = "1.3.3"
 blake3 = "0.3.8"
+clap = "3.0.0-beta.2"
 dirs = "3.0.2"
+log = "0.4.14"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
+simplelog = "0.10.0"
 sled = "0.34.6"
