--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,20 @@ edition = "2018"
 name = "dival"
 
 [dependencies]
-anyhow = "1.0.40"
+anyhow = "1.0.41"
+bincode = "1.3.3"
 blake3 = "0.3.8"
 clap = "3.0.0-beta.2"
 dirs = "3.0.2"
+hypothesis = { version = "0.10.2", default-features = false }
 log = "0.4.14"
+once_cell = "1.8.0"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 simplelog = "0.10.0"
 sled = "0.34.6"
+tokio = { version = "1.7.1", features = ["rt"] }
+toml = "0.5.8"
 
 [build-dependencies]
 clap = "3.0.0-beta.2"
