--- a/.build.yml
+++ b/.build.yml
@@ -1,11 +1,15 @@
 image: archlinux
 packages:
   - rustup
+  - cargo-audit
 sources:
   - "https://github.com/laxect/diva-livomo.git"
 tasks:
   - setup: |
       rustup default stable
+  - audit: |
+      cd kikan
+      cargo audit
   - build: |
       cd diva-livomo
       cargo build --release
