--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,21 +9,22 @@ edition = "2021"
 name = "dival"
 
 [dependencies]
-anyhow = "1.0.44"
+anyhow = "1.0.56"
 bincode = "1.3.3"
-blake3 = "1.1.0"
-clap = "3.0.0-beta.5"
+blake3 = "1.3.1"
+clap = { version = "3.1.10", features = ["derive"] }
 dirs = "4.0.0"
-hypothesis = { version = "0.10.2", default-features = false }
-log = "0.4.14"
-once_cell = "1.8.0"
-serde = { version = "1.0.130", features = ["derive"] }
-serde_json = "1.0.68"
-simplelog = "0.10.2"
+hypothesis = { git = "https://github.com/laxect/rust-hypothesis.git", branch = "patch", default-features = false }
+log = "0.4.16"
+once_cell = "1.10.0"
+serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0.79"
+simplelog = "0.12.0"
 sled = "0.34.7"
-tokio = { version = "1.12.0", features = ["rt"] }
-toml = "0.5.8"
+time = { version = "0.3.9", features = ["formatting"] }
+tokio = { version = "1.17.0", features = ["rt"] }
+toml = "0.5.9"
 
 [build-dependencies]
-clap = "3.0.0-beta.5"
-clap_generate = "3.0.0-beta.5"
+clap = { version = "3.1.10", features = ["derive"] }
+clap_complete = "3.1.2"
