--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,13 @@ bincode = "1.3.3"
 blake3 = "1.3.1"
 clap = { version = "3.1.10", features = ["derive"] }
 dirs = "4.0.0"
+gio = "0.15.11"
 hypothesis = { git = "https://github.com/laxect/rust-hypothesis.git", branch = "patch", default-features = false }
+libsecret = { version = "0.1.4", features = ["v0_20"] }
 log = "0.4.16"
 once_cell = "1.10.0"
+pinentry = "0.5.0"
+secrecy = "0.8.0"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 simplelog = "0.12.0"
