--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,8 +31,8 @@ jobs:
           TAG=`git describe --tags --abbrev=0`
           mkdir -p .cargo
           cp vendor.toml .cargo/config.toml
-          7z a ../changeup-$TAG.zip
-          cp ../changeup-$TAG.zip ./
+          7z a ../diva-livomo-$TAG.zip
+          cp ../diva-livomo-$TAG.zip ./
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
