--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "diva-livomo"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,11 +15,11 @@ blake3 = "1.3.1"
 clap = { version = "3.2.8", features = ["derive"] }
 dirs = "4.0.0"
 gio = "0.15.12"
-hypothesis = { version = "0.10.3", default-features = false }
 libsecret = { version = "0.1.4", features = ["v0_20"] }
 log = "0.4.17"
 once_cell = "1.12.0"
 pinentry = "0.5.0"
+hypothesis-rs = "0.11.0"
 secrecy = "0.8.0"
 serde = { version = "1.0.138", features = ["derive"] }
 serde_json = "1.0.82"
